# OOP2-project

./: CMakeLists.txt  CMakePresets.json  README.md  README.txt
include/: AStarPathfinder.h  ArmorBar.h  Bar.h  BaseResourceManager.h  ConeLight.h  Constants.h  ContactListener.h  Controller.h  CustomLight.h  CustomRadialLight.h  DebugDraw.h  Enemy.h  Factory.h  FixtureCollector.h  Game.h  GameSessionData.h  HealthBar.h  LevelManager.h  LightSystem.h  LoadMap.h  Physics.h  PlayGround.h  RayCastClosest.h  RenderLayers.h  SoundManager.h  Statusbar.h  TextureManager.h  UserData.h  VisionLight.h  Weapon.h  WeaponLight.h  tinyxml2.h
include/AnimationInc/: Animation.h
include/AttackingStrategyInc/: AttakStrategy.h  SimpleShootStrategy.h
include/Bars/: ArmorBar.h  Bar.h  HealthBar.h
include/CommandInc/: Command.h  ExitCommand.h  PopScreenCommand.h  PopToHomeCommand.h  PushScreenCommand.h  SmartWeaponCommand.h  StartGameCommand.h  StartMusicCommand.h  StopMusicCommand.h  SwitchScreenCommand.h
include/GameObject/: Bullet.h  Character.h  ContactListener.h  Enemy.h  EnemySpDwGift.h  Entity.h  ExtraArmorGift.h  ExtraHealthGift.h  GameObject.h  Gift.h  HealthBar.h  MovingObject.h  Player.h  SpeedUpGift.h  SpyGift.h
include/MoveStrategyAndInfoInc/: IQChaseStrategy.h  KeyboardMoveStrategy.h  MoveInfo.h  MoveStrategy.h
include/ResourseInc/: BaseResourceManager.h  SoundManager.h  SoundManger.h  TextureManager.h
include/ScreensInc/: Button.h  ChooseLevelScreen.h  GameOver.h  GameWIn.h  Help.h  HomeScreen.h  LoadGame.h  Market.h  PauseScreen.h  PlayGround.h  Screen.h  SplashScreen.h  Statusbar.h
include/StatesInc/: AttacingState.h  AttackingState.h  AttackingStateEnemy.h  AttackingStatePlayer.h  ChasingState.h  IdleStatePlayer.h  State.h  (+2 more)
resources/: CMakeLists.txt  GaussianBlur.frag  easy_map.json  hard_map.json  light.frag  map.json  map_decor_2.tsj  medium_map.json  save.json
src/: AStarPathfinder.cpp  ArmorBar.cpp  Bar.cpp  CMakeLists.txt  ConeLight.cpp  Constants.cpp  ContactListener.cpp  Controller.cpp  CustomLight.cpp  CustomRadialLight.cpp  Factory.cpp  Game.cpp  GameSessionData.cpp  HealthBar.cpp  LevelManager.cpp  LightSystem.cpp  LoadMap.cpp  Physics.cpp  PlayGround.cpp  RayCastClosest.cpp  RenderLayers.cpp  SoundManager.cpp  Statusbar.cpp  TextureManager.cpp  VisionLight.cpp  Weapon.cpp  WeaponLight.cpp  main.cpp
(+75 files in other folders)
